remove cv2 use temporarily

--- a/rfb_ssd_detection.ipynb
+++ b/rfb_ssd_detection.ipynb
@@ -836,7 +836,21 @@
       "Epoch 2/10\n",
       "516/516 [==============================] - 70s 136ms/step - loss: 0.8110 - val_loss: 1.2395\n",
       "Epoch 3/10\n",
-      "264/516 [==============>...............] - ETA: 33s - loss: 0.4919"
+      "516/516 [==============================] - 72s 140ms/step - loss: 0.4503 - val_loss: 1.2368\n",
+      "Epoch 4/10\n",
+      "516/516 [==============================] - 72s 140ms/step - loss: 0.3034 - val_loss: 1.0536\n",
+      "Epoch 5/10\n",
+      "516/516 [==============================] - 69s 134ms/step - loss: 0.2571 - val_loss: 1.0687\n",
+      "Epoch 6/10\n",
+      "516/516 [==============================] - 70s 137ms/step - loss: 0.2479 - val_loss: 1.0477\n",
+      "Epoch 7/10\n",
+      "516/516 [==============================] - 74s 144ms/step - loss: 0.2070 - val_loss: 1.0312\n",
+      "Epoch 8/10\n",
+      "516/516 [==============================] - 75s 145ms/step - loss: 0.2069 - val_loss: 1.1032\n",
+      "Epoch 9/10\n",
+      "516/516 [==============================] - 73s 141ms/step - loss: 0.1873 - val_loss: 1.0984\n",
+      "Epoch 10/10\n",
+      " 72/516 [===>..........................] - ETA: 1:00 - loss: 0.1658"
      ]
     }
    ],
